--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,6 @@ $quaternaryColor: #EFC125;
 // Create mixin for buttons
 @mixin button{
   margin-bottom: 0.1em;
-  font-size: 1.2em;
   font-weight: 600;
   text-align: center;
   text-decoration: none;
@@ -98,11 +97,12 @@ $quaternaryColor: #EFC125;
 }
 
 // SPALASH PAGE BUTTON ---------------------------------------------------------
-
 .exploreBtn {
   @include button;
-  padding: 0.7em 1.4em;
+  padding: 0.78888em 3.4em;
   margin: 0.4em;
+  font-size: 1em;
+  text-transform: uppercase;
   color: $secondaryColor;
   border: 1px solid $secondaryColor;
 
@@ -192,13 +192,18 @@ $quaternaryColor: #EFC125;
 
 .modal-header {
   border:none;
-  .close {
-    padding: 0.5em 0.6em 0.5em 0;
-    margin: 0;
-    font-size: 2em;
-    color: $tertiaryColor;
-    opacity: 1;
+
+
+  .helpModalCloseBtn {
+    padding: 0.8em 0.8em 0.5em 0;
   }
+}
+
+.close {
+  margin: 0;
+  font-size: 2em;
+  color: $tertiaryColor;
+  opacity: 1;
 }
 
 // SLIDES OPTIONS --------------------------------------------------------------
@@ -279,7 +284,7 @@ $quaternaryColor: #EFC125;
   margin-top: 1.5em;
 }
 
-.nightsErrorMsg {
+.nightsErrorMsg, .fiveGuestsMatchError, .sixGuestsMatchError {
   color: #DC1C0C;
   font-weight: 400;
 }
@@ -291,8 +296,9 @@ $quaternaryColor: #EFC125;
 // MEAL OPTIONS ---------------------------------------------------------------
 .submitBtn, .viewResultsBtn {
   @include button;
-  padding: 0.6em 1.3em;
+  padding: 0.5em 2.2em;
   margin-top: 1.5em;
+  font-size: 1.2em;
   bottom: -3em;
   color: $quaternaryColor;
   border: 2px solid $quaternaryColor;
@@ -304,6 +310,13 @@ $quaternaryColor: #EFC125;
   transition-duration: 0.3s;
   -webkit-transition-property: transform;
   transition-property: transform;
+}
+
+.submitBtn:hover, .viewResultsBtn:hover, .bookNowbtn:hover, .restart:hover {
+  color: white;
+  border-color: #EBD426;
+  background-color: $quaternaryColor;
+
 }
 
 // VALIDATION ------------------------------------------------------------------
@@ -337,7 +350,6 @@ $quaternaryColor: #EFC125;
 .mapWrapper {
   margin: 1.9em auto;
   width: 100%;
-  height: 50vh;
 }
 
 .btnWrapper {
@@ -347,22 +359,28 @@ $quaternaryColor: #EFC125;
 .map {
  margin: 0 auto;
  width: 100%;
- height: 50vh;
+ height: 53vh;
+ box-shadow: 0 0.1em 1.8em 0 grey;
 }
 
 
 // ACCOMMODATION MODAL ---------------------------------------------------------
 
-.accomModal {
 
+.accomModal {
   .accomClose {
-    padding: 0.5em 0.6em 0 0;
+    padding: 0;
+    margin: 0.4em 0em 0em 12.5em;
   }
 
-  .modal-body {
+  .accomModalBody {
     padding-bottom: 0;
 
-    .modal-title {
+    .accomModalTitle {
+      text-align: center;
+    }
+
+    .accomModalName {
       text-align: center;
       font-weight: 600;
     }
@@ -376,20 +394,20 @@ $quaternaryColor: #EFC125;
       margin-bottom: 0;
     }
   }
+}
 
-  .modal-footer {
-    padding: 2em;
-    border: none;
-    .bookNowBtn {
-      @include button;
-      font-size: 1em;
-      padding: 0.5em 3.3em;
-      margin: 0 auto;
-      color: $quaternaryColor;
-      border: 2px solid $quaternaryColor;
-    }
+.modal-footer {
+  padding: 2em;
+  border: none;
+
+  .bookNowBtn {
+    @include button;
+    padding: 0.5em 3.3em;
+    margin: 0 auto;
+    font-size: 1em;
+    color: $quaternaryColor;
+    border: 2px solid $quaternaryColor;
   }
-
 }
 
 // SECTION 4 - RESULTS ---------------------------------------------------------
@@ -400,8 +418,6 @@ $quaternaryColor: #EFC125;
 
 .smallLogoResults {
   @include logo;
-  // margin-top: 71px;
-  // margin-bottom: 0;
   padding: 10px 0px 34px 0px;
   font-size: 2em;
   float: right;
@@ -425,7 +441,6 @@ $quaternaryColor: #EFC125;
   background-position: center;
   background-size: cover;
   background-color: pink;
-  // box-shadow: -5px 13px 30px -8px black;
   border: 3px solid white;
   margin-bottom: 0px;
 }
