--- a/css/style.css
+++ b/css/style.css
@@ -68,19 +68,19 @@
   background-color: rgba(0, 0, 0, 0);
   border-radius: 2.1em;
   cursor: pointer;
-  padding: 0.78888em 3.4em;
-  margin: 0.4em;
-  font-size: 1em;
-  text-transform: uppercase;
-  color: white;
-  border: 1px solid white;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: transform;
-  transition-property: transform; }
+  transition-property: transform;
+  padding: 0.78888em 3.4em;
+  margin: 0.4em;
+  font-size: 1em;
+  text-transform: uppercase;
+  color: white;
+  border: 1px solid white; }
 
 .exploreBtn:hover, .exploreBtn:focus, .submitBtn:hover, .submitBtn:focus, .viewResultsBtn:hover, .viewResultsBtn:focus {
   -webkit-transform: scale(1.1);
@@ -243,19 +243,19 @@
   background-color: rgba(0, 0, 0, 0);
   border-radius: 2.1em;
   cursor: pointer;
-  padding: 0.5em 2.2em;
-  margin-top: 1.5em;
-  font-size: 1.2em;
-  bottom: -3em;
-  color: #EFC125;
-  border: 2px solid #EFC125;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: transform;
-  transition-property: transform; }
+  transition-property: transform;
+  padding: 0.5em 2.2em;
+  margin-top: 1.5em;
+  font-size: 1.2em;
+  bottom: -3em;
+  color: #EFC125;
+  border: 2px solid #EFC125; }
 
 .submitBtn:hover, .viewResultsBtn:hover, .bookNowbtn:hover, .restart:hover {
   color: white;
@@ -338,10 +338,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 0.2em 0 0.5em 0;
-  font-size: 2em;
-  float: right;
-  position: relative;
-  right: 0.7em; }
+  font-size: 2em; }
 
 .restartBtn {
   margin-bottom: 0.1em;
@@ -354,7 +351,24 @@
   font-size: 0.6em;
   padding: 0.6em 1.3em;
   color: #EFC125;
+  border: 2px solid #EFC125;
+  position: absolute;
+  right: 10%;
+  top: 8%; }
+
+.restartBtn:visited {
+  color: #EFC125;
   border: 2px solid #EFC125; }
+
+.restartBtn:hover {
+  text-decoration: none;
+  color: white;
+  border-color: #EBD426;
+  background-color: #EFC125; }
+
+.restartBtn:active {
+  background-color: transparent;
+  color: white; }
 
 .accomImg {
   margin: 0.9em auto;
@@ -413,10 +427,6 @@
     width: 5%; }
 
   .layer {
-    top: 13%; }
-
-  .smallLogoResults {
-    position: relative;
-    right: 2.7em; } }
+    top: 13%; } }
 
 /*# sourceMappingURL=style.css.map */
