Changed bg color of image. Testing github pages.

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@
   height: 18.9rem;
   background-position: center;
   background-size: cover;
-  background-color: pink;
+  background-color: #384059;
   border: 3px solid white;
   margin-bottom: 0px; }
 
