--- a/sass/style.scss
+++ b/sass/style.scss
@@ -461,7 +461,7 @@ $quaternaryColor: #EFC125;
   height: 18.9rem;
   background-position: center;
   background-size: cover;
-  background-color: pink;
+  background-color: #384059;
   border: 3px solid white;
   margin-bottom: 0px;
 }
