--- a/sass/style.scss
+++ b/sass/style.scss
@@ -98,8 +98,7 @@ $quaternaryColor: #EFC125;
 }
 
 .subText {
-  margin-top: 0.6em;
-  margin-bottom: 1.5em;
+  margin: 0.6em 1.7em 1.5em;
   font-family: 'Raleway', sans-serif;
   font-size: 1.5em;
   font-weight: 300;
@@ -149,7 +148,7 @@ $quaternaryColor: #EFC125;
   z-index: 4;
   width: 100%;
   left: 0;
-  top: 16%;
+  top: 16vh;
   overflow: hidden;
 
   /* Preventing video flicker on some browsers*/
@@ -509,7 +508,6 @@ $quaternaryColor: #EFC125;
   bottom: 25px;
 }
 
-// OPTIONAL MUST REMOVE LATER --------------------------------------------------
 #section0, #section1, #section2, #section4, #section5{
   text-align: center;
 }
@@ -529,4 +527,7 @@ $quaternaryColor: #EFC125;
 	  top: 13%;
   }
 
+  .resultsHR {
+    width: 50%;
+  }
 }
