Fixed landscape issue on ipad and laptop screens. Fixed css.

--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -92,7 +92,7 @@ html.fp-enabled,
     -webkit-transition: none !important;
     transition: none !important;
 }
-#fp-nav {
+/* #fp-nav {
     position: fixed;
     z-index: 100;
     margin-top: -32px;
@@ -105,7 +105,7 @@ html.fp-enabled,
 }
 #fp-nav.left {
     left: 17px;
-}
+} */
 .fp-slidesNav{
     position: absolute;
     z-index: 4;
@@ -123,12 +123,12 @@ html.fp-enabled,
 .fp-slidesNav.top {
     top: 17px;
 }
-#fp-nav ul,
+
 .fp-slidesNav ul {
   margin: 0;
   padding: 0;
 }
-#fp-nav ul li,
+
 .fp-slidesNav ul li {
     display: block;
     width: 14px;
@@ -139,7 +139,7 @@ html.fp-enabled,
 .fp-slidesNav ul li {
     display: inline-block;
 }
-#fp-nav ul li a,
+
 .fp-slidesNav ul li a {
     display: block;
     position: relative;
@@ -149,16 +149,16 @@ html.fp-enabled,
     cursor: pointer;
     text-decoration: none;
 }
-#fp-nav ul li a.active span,
+
 .fp-slidesNav ul li a.active span,
-#fp-nav ul li:hover a.active span,
+
 .fp-slidesNav ul li:hover a.active span{
     height: 12px;
     width: 12px;
     margin: -6px 0 0 -6px;
     border-radius: 100%;
  }
-#fp-nav ul li a span,
+
 .fp-slidesNav ul li a span {
     border-radius: 50%;
     position: absolute;
@@ -175,13 +175,13 @@ html.fp-enabled,
     -o-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
 }
-#fp-nav ul li:hover a span,
+
 .fp-slidesNav ul li:hover a span{
     width: 10px;
     height: 10px;
     margin: -5px 0px 0px -5px;
 }
-#fp-nav ul li .fp-tooltip {
+/* #fp-nav ul li .fp-tooltip {
     position: absolute;
     top: -2px;
     color: #fff;
@@ -207,7 +207,7 @@ html.fp-enabled,
 }
 #fp-nav ul li .fp-tooltip.left {
     left: 20px;
-}
+} */
 .fp-auto-height.fp-section,
 .fp-auto-height .fp-slide,
 .fp-auto-height .fp-tableCell{
